// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<PollHistory /> Poll detail displays poll detail on active poll list item click 1`] = `
<legend
  data-testid="pollQuestion"
>
  Question?
</legend>
`;

exports[`<PollHistory /> Poll detail displays poll detail on past poll list item click 1`] = `
<legend
  data-testid="pollQuestion"
>
  What?
</legend>
`;

exports[`<PollHistory /> Poll detail navigates back to poll list from detail view on header click 1`] = `
<div
  class="mx_AccessibleButton mx_PollDetailHeader mx_AccessibleButton_hasKind mx_AccessibleButton_kind_content_inline"
  role="button"
  tabindex="0"
>
  <svg
    class="mx_PollDetailHeader_icon"
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m13.3 17.3-4.6-4.6a.9.9 0 0 1-.213-.325A1.1 1.1 0 0 1 8.425 12q0-.2.062-.375A.9.9 0 0 1 8.7 11.3l4.6-4.6a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7L10.8 12l3.9 3.9a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
    />
  </svg>
  Active polls
</div>
`;

exports[`<PollHistory /> renders a list of active polls when there are polls in the room 1`] = `
<div>
  <div
    class="mx_PollHistory_content"
  >
    <h2
      class="mx_Heading_h2 mx_PollHistory_header"
    >
      Polls
    </h2>
    <div
      class="mx_PollHistoryList"
    >
      <fieldset
        class="mx_FilterTabGroup"
      >
        <label
          data-testid="filter-tab-PollHistory_filter-ACTIVE"
        >
          <input
            checked=""
            name="PollHistory_filter"
            type="radio"
            value="ACTIVE"
          />
          <span>
            Active polls
          </span>
        </label>
        <label
          data-testid="filter-tab-PollHistory_filter-ENDED"
        >
          <input
            name="PollHistory_filter"
            type="radio"
            value="ENDED"
          />
          <span>
            Past polls
          </span>
        </label>
      </fieldset>
      <ol
        class="mx_PollHistoryList_list mx_PollHistoryList_list_ACTIVE"
      >
        <li
          class="mx_PollListItem"
          data-testid="pollListItem-$2"
        >
          <span
            tabindex="0"
          >
            <div
              aria-labelledby="_r_a_"
              class="mx_PollListItem_content"
            >
              <span>
                02/02/23
              </span>
              <svg
                class="mx_PollListItem_icon"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
                />
              </svg>
              <span
                class="mx_PollListItem_question"
              >
                Where?
              </span>
            </div>
          </span>
        </li>
        <li
          class="mx_PollListItem"
          data-testid="pollListItem-$1"
        >
          <span
            tabindex="0"
          >
            <div
              aria-labelledby="_r_f_"
              class="mx_PollListItem_content"
            >
              <span>
                02/02/23
              </span>
              <svg
                class="mx_PollListItem_icon"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
                />
              </svg>
              <span
                class="mx_PollListItem_question"
              >
                Question?
              </span>
            </div>
          </span>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`<PollHistory /> renders a no polls message and a load more button when not at end of timeline 1`] = `
<div
  class="mx_AccessibleButton mx_PollHistoryList_loadMorePolls mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
  role="button"
  tabindex="0"
>
  Load more polls
  <div
    class="mx_InlineSpinner"
  >
    <div
      aria-label="Loading…"
      class="mx_InlineSpinner_icon mx_Spinner_icon"
      style="width: 16px; height: 16px;"
    />
  </div>
</div>
`;

exports[`<PollHistory /> renders a no polls message and a load more button when not at end of timeline 2`] = `
<div
  class="mx_AccessibleButton mx_PollHistoryList_loadMorePolls mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
  role="button"
  tabindex="0"
>
  Load more polls
</div>
`;
